--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,5 @@ urllib3                   1.24.1                   py37_0
 wheel                     0.32.3                   py37_0  
 xz                        5.2.4                h14c3975_4  
 zlib                      1.2.11               h7b6447c_3  
+
+phantomjs-2.1.1
